// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MultiSelectAutocomplete should render a fully wired-up autocomplete component 1`] = `
<div
  className="hods-multi-select-autocomplete__outer-wrapper hods-multi-select-autocomplete"
>
  <div
    className=" css-b62m3t-container"
    id="autocompleteId"
    onKeyDown={[Function]}
  >
    <span
      className="css-1f43avz-a11yText-A11yText"
      id="react-select-3-live-region"
    />
    <span
      aria-atomic="false"
      aria-live="polite"
      aria-relevant="additions text"
      className="css-1f43avz-a11yText-A11yText"
    />
    <div
      className="hods-multi-select-autocomplete__control css-x19aeh-control"
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className="hods-multi-select-autocomplete__value-container css-319lph-ValueContainer"
      >
        <div
          className="hods-multi-select-autocomplete__placeholder css-14el2xx-placeholder"
          id="react-select-3-placeholder"
        >
          Select...
        </div>
        <div
          className="hods-multi-select-autocomplete__input-container css-6j8wv5-Input"
          data-value=""
        >
          <input
            aria-autocomplete="list"
            aria-describedby="react-select-3-placeholder"
            aria-expanded={false}
            aria-haspopup={true}
            autoCapitalize="none"
            autoComplete="off"
            autoCorrect="off"
            className="hods-multi-select-autocomplete__input"
            disabled={false}
            id="react-select-3-input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            role="combobox"
            spellCheck="false"
            style={
              Object {
                "background": 0,
                "border": 0,
                "color": "inherit",
                "font": "inherit",
                "gridArea": "1 / 2",
                "label": "input",
                "margin": 0,
                "minWidth": "2px",
                "opacity": 1,
                "outline": 0,
                "padding": 0,
                "width": "100%",
              }
            }
            tabIndex={0}
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        className="hods-multi-select-autocomplete__indicators css-1hb7zxy-IndicatorsContainer"
      />
    </div>
  </div>
</div>
`;

exports[`MultiSelectAutocomplete should render an autocomplete component in multi select mode with preselected value of alpha 1`] = `
<div
  className="hods-multi-select-autocomplete__outer-wrapper hods-multi-select-autocomplete"
>
  <div
    className=" css-b62m3t-container"
    id="autocompleteId"
    onKeyDown={[Function]}
  >
    <span
      className="css-1f43avz-a11yText-A11yText"
      id="react-select-8-live-region"
    />
    <span
      aria-atomic="false"
      aria-live="polite"
      aria-relevant="additions text"
      className="css-1f43avz-a11yText-A11yText"
    />
    <div
      className="hods-multi-select-autocomplete__control css-x19aeh-control"
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className="hods-multi-select-autocomplete__value-container hods-multi-select-autocomplete__value-container--has-value css-319lph-ValueContainer"
      >
        <div
          className="hods-multi-select-autocomplete__single-value css-qc6sy-singleValue"
        >
          alpha
        </div>
        <div
          className="hods-multi-select-autocomplete__input-container css-6j8wv5-Input"
          data-value=""
        >
          <input
            aria-autocomplete="list"
            aria-expanded={false}
            aria-haspopup={true}
            autoCapitalize="none"
            autoComplete="off"
            autoCorrect="off"
            className="hods-multi-select-autocomplete__input"
            disabled={false}
            id="react-select-8-input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            role="combobox"
            spellCheck="false"
            style={
              Object {
                "background": 0,
                "border": 0,
                "color": "inherit",
                "font": "inherit",
                "gridArea": "1 / 2",
                "label": "input",
                "margin": 0,
                "minWidth": "2px",
                "opacity": 1,
                "outline": 0,
                "padding": 0,
                "width": "100%",
              }
            }
            tabIndex={0}
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        className="hods-multi-select-autocomplete__indicators css-1hb7zxy-IndicatorsContainer"
      />
    </div>
  </div>
</div>
`;

exports[`MultiSelectAutocomplete should render an autocomplete component in multi select mode with preselected values of alpha, bravo  1`] = `
<div
  className="hods-multi-select-autocomplete__outer-wrapper hods-multi-select-autocomplete"
>
  <div
    className=" css-b62m3t-container"
    id="autocompleteId"
    onKeyDown={[Function]}
  >
    <span
      className="css-1f43avz-a11yText-A11yText"
      id="react-select-9-live-region"
    />
    <span
      aria-atomic="false"
      aria-live="polite"
      aria-relevant="additions text"
      className="css-1f43avz-a11yText-A11yText"
    />
    <div
      className="hods-multi-select-autocomplete__control css-x19aeh-control"
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className="hods-multi-select-autocomplete__value-container hods-multi-select-autocomplete__value-container--has-value css-319lph-ValueContainer"
      >
        <div
          className="hods-multi-select-autocomplete__single-value css-qc6sy-singleValue"
        >
          alpha
        </div>
        <div
          className="hods-multi-select-autocomplete__input-container css-6j8wv5-Input"
          data-value=""
        >
          <input
            aria-autocomplete="list"
            aria-expanded={false}
            aria-haspopup={true}
            autoCapitalize="none"
            autoComplete="off"
            autoCorrect="off"
            className="hods-multi-select-autocomplete__input"
            disabled={false}
            id="react-select-9-input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            role="combobox"
            spellCheck="false"
            style={
              Object {
                "background": 0,
                "border": 0,
                "color": "inherit",
                "font": "inherit",
                "gridArea": "1 / 2",
                "label": "input",
                "margin": 0,
                "minWidth": "2px",
                "opacity": 1,
                "outline": 0,
                "padding": 0,
                "width": "100%",
              }
            }
            tabIndex={0}
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        className="hods-multi-select-autocomplete__indicators css-1hb7zxy-IndicatorsContainer"
      />
    </div>
  </div>
</div>
`;

exports[`MultiSelectAutocomplete should render an autocomplete component with a preselected value of "alpha" 1`] = `
<div
  className="hods-multi-select-autocomplete__outer-wrapper hods-multi-select-autocomplete"
>
  <div
    className=" css-b62m3t-container"
    id="autocompleteId"
    onKeyDown={[Function]}
  >
    <span
      className="css-1f43avz-a11yText-A11yText"
      id="react-select-6-live-region"
    />
    <span
      aria-atomic="false"
      aria-live="polite"
      aria-relevant="additions text"
      className="css-1f43avz-a11yText-A11yText"
    />
    <div
      className="hods-multi-select-autocomplete__control css-x19aeh-control"
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className="hods-multi-select-autocomplete__value-container hods-multi-select-autocomplete__value-container--has-value css-319lph-ValueContainer"
      >
        <div
          className="hods-multi-select-autocomplete__single-value css-qc6sy-singleValue"
        >
          alpha
        </div>
        <div
          className="hods-multi-select-autocomplete__input-container css-6j8wv5-Input"
          data-value=""
        >
          <input
            aria-autocomplete="list"
            aria-expanded={false}
            aria-haspopup={true}
            autoCapitalize="none"
            autoComplete="off"
            autoCorrect="off"
            className="hods-multi-select-autocomplete__input"
            disabled={false}
            id="react-select-6-input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            role="combobox"
            spellCheck="false"
            style={
              Object {
                "background": 0,
                "border": 0,
                "color": "inherit",
                "font": "inherit",
                "gridArea": "1 / 2",
                "label": "input",
                "margin": 0,
                "minWidth": "2px",
                "opacity": 1,
                "outline": 0,
                "padding": 0,
                "width": "100%",
              }
            }
            tabIndex={0}
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        className="hods-multi-select-autocomplete__indicators css-1hb7zxy-IndicatorsContainer"
      />
    </div>
  </div>
</div>
`;

exports[`MultiSelectAutocomplete should render an autocomplete component with a preselected value of "bravo" 1`] = `
<div
  className="hods-multi-select-autocomplete__outer-wrapper hods-multi-select-autocomplete"
>
  <div
    className=" css-b62m3t-container"
    id="autocompleteId"
    onKeyDown={[Function]}
  >
    <span
      className="css-1f43avz-a11yText-A11yText"
      id="react-select-7-live-region"
    />
    <span
      aria-atomic="false"
      aria-live="polite"
      aria-relevant="additions text"
      className="css-1f43avz-a11yText-A11yText"
    />
    <div
      className="hods-multi-select-autocomplete__control css-x19aeh-control"
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className="hods-multi-select-autocomplete__value-container hods-multi-select-autocomplete__value-container--has-value css-319lph-ValueContainer"
      >
        <div
          className="hods-multi-select-autocomplete__single-value css-qc6sy-singleValue"
        >
          bravo
        </div>
        <div
          className="hods-multi-select-autocomplete__input-container css-6j8wv5-Input"
          data-value=""
        >
          <input
            aria-autocomplete="list"
            aria-expanded={false}
            aria-haspopup={true}
            autoCapitalize="none"
            autoComplete="off"
            autoCorrect="off"
            className="hods-multi-select-autocomplete__input"
            disabled={false}
            id="react-select-7-input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            role="combobox"
            spellCheck="false"
            style={
              Object {
                "background": 0,
                "border": 0,
                "color": "inherit",
                "font": "inherit",
                "gridArea": "1 / 2",
                "label": "input",
                "margin": 0,
                "minWidth": "2px",
                "opacity": 1,
                "outline": 0,
                "padding": 0,
                "width": "100%",
              }
            }
            tabIndex={0}
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        className="hods-multi-select-autocomplete__indicators css-1hb7zxy-IndicatorsContainer"
      />
    </div>
  </div>
</div>
`;

exports[`MultiSelectAutocomplete should render an autocomplete component with an error control 1`] = `
<div
  className="hods-multi-select-autocomplete__outer-wrapper hods-multi-select-autocomplete error"
>
  <div
    className=" css-b62m3t-container"
    id="autocompleteId"
    onKeyDown={[Function]}
  >
    <span
      className="css-1f43avz-a11yText-A11yText"
      id="react-select-5-live-region"
    />
    <span
      aria-atomic="false"
      aria-live="polite"
      aria-relevant="additions text"
      className="css-1f43avz-a11yText-A11yText"
    />
    <div
      className="hods-multi-select-autocomplete error__control css-x19aeh-control"
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className="hods-multi-select-autocomplete error__value-container hods-multi-select-autocomplete error__value-container--has-value css-319lph-ValueContainer"
      >
        <div
          className="hods-multi-select-autocomplete error__single-value css-qc6sy-singleValue"
        >
          alpha
        </div>
        <div
          className="hods-multi-select-autocomplete error__input-container css-6j8wv5-Input"
          data-value=""
        >
          <input
            aria-autocomplete="list"
            aria-expanded={false}
            aria-haspopup={true}
            autoCapitalize="none"
            autoComplete="off"
            autoCorrect="off"
            className="hods-multi-select-autocomplete error__input"
            disabled={false}
            id="react-select-5-input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            role="combobox"
            spellCheck="false"
            style={
              Object {
                "background": 0,
                "border": 0,
                "color": "inherit",
                "font": "inherit",
                "gridArea": "1 / 2",
                "label": "input",
                "margin": 0,
                "minWidth": "2px",
                "opacity": 1,
                "outline": 0,
                "padding": 0,
                "width": "100%",
              }
            }
            tabIndex={0}
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        className="hods-multi-select-autocomplete error__indicators css-1hb7zxy-IndicatorsContainer"
      />
    </div>
  </div>
</div>
`;

exports[`MultiSelectAutocomplete should render an input with disabled flag set and the error flag set 1`] = `
<div
  className="hods-multi-select-autocomplete__outer-wrapper hods-multi-select-autocomplete error"
>
  <div
    className="hods-multi-select-autocomplete error--is-disabled css-3iigni-container"
    id="autocompleteId"
    onKeyDown={[Function]}
  >
    <span
      className="css-1f43avz-a11yText-A11yText"
      id="react-select-4-live-region"
    />
    <span
      aria-atomic="false"
      aria-live="polite"
      aria-relevant="additions text"
      className="css-1f43avz-a11yText-A11yText"
    />
    <div
      className="hods-multi-select-autocomplete error__control hods-multi-select-autocomplete error__control--is-disabled css-13ibep8-control"
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className="hods-multi-select-autocomplete error__value-container css-319lph-ValueContainer"
      >
        <div
          className="hods-multi-select-autocomplete error__placeholder css-14el2xx-placeholder"
          id="react-select-4-placeholder"
        >
          Select...
        </div>
        <div
          className="hods-multi-select-autocomplete error__input-container css-jzldcf-Input"
          data-value=""
        >
          <input
            aria-autocomplete="list"
            aria-describedby="react-select-4-placeholder"
            aria-expanded={false}
            aria-haspopup={true}
            autoCapitalize="none"
            autoComplete="off"
            autoCorrect="off"
            className="hods-multi-select-autocomplete error__input"
            disabled={true}
            id="react-select-4-input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            role="combobox"
            spellCheck="false"
            style={
              Object {
                "background": 0,
                "border": 0,
                "color": "inherit",
                "font": "inherit",
                "gridArea": "1 / 2",
                "label": "input",
                "margin": 0,
                "minWidth": "2px",
                "opacity": 1,
                "outline": 0,
                "padding": 0,
                "width": "100%",
              }
            }
            tabIndex={0}
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        className="hods-multi-select-autocomplete error__indicators css-1hb7zxy-IndicatorsContainer"
      />
    </div>
  </div>
</div>
`;

exports[`MultiSelectAutocomplete should render when disabled flag is set 1`] = `
<div
  className="hods-multi-select-autocomplete__outer-wrapper hods-multi-select-autocomplete"
>
  <div
    className="hods-multi-select-autocomplete--is-disabled css-3iigni-container"
    id="autocompleteId"
    onKeyDown={[Function]}
  >
    <span
      className="css-1f43avz-a11yText-A11yText"
      id="react-select-2-live-region"
    />
    <span
      aria-atomic="false"
      aria-live="polite"
      aria-relevant="additions text"
      className="css-1f43avz-a11yText-A11yText"
    />
    <div
      className="hods-multi-select-autocomplete__control hods-multi-select-autocomplete__control--is-disabled css-13ibep8-control"
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className="hods-multi-select-autocomplete__value-container hods-multi-select-autocomplete__value-container--has-value css-319lph-ValueContainer"
      >
        <div
          className="hods-multi-select-autocomplete__single-value hods-multi-select-autocomplete__single-value--is-disabled css-lr9fot-singleValue"
        >
          alpha
        </div>
        <div
          className="hods-multi-select-autocomplete__input-container css-jzldcf-Input"
          data-value=""
        >
          <input
            aria-autocomplete="list"
            aria-expanded={false}
            aria-haspopup={true}
            autoCapitalize="none"
            autoComplete="off"
            autoCorrect="off"
            className="hods-multi-select-autocomplete__input"
            disabled={true}
            id="react-select-2-input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            role="combobox"
            spellCheck="false"
            style={
              Object {
                "background": 0,
                "border": 0,
                "color": "inherit",
                "font": "inherit",
                "gridArea": "1 / 2",
                "label": "input",
                "margin": 0,
                "minWidth": "2px",
                "opacity": 1,
                "outline": 0,
                "padding": 0,
                "width": "100%",
              }
            }
            tabIndex={0}
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        className="hods-multi-select-autocomplete__indicators css-1hb7zxy-IndicatorsContainer"
      />
    </div>
  </div>
</div>
`;
